# corner_detector

./: CMakeLists.txt  cornerDetector.cpp  cornerDetector.h  corner_detector.cpp  corner_detector.h
test/: checkEigenvalues.cpp  checkHarrisResponse.cpp  check_eigenvalues.cpp
